--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,4 @@
-# SQLite version 3.x
+# SQLite ver1sion 3.x
 #   gem install sqlite3
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
@@ -19,7 +19,7 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: db-production
   pool: 5
   timeout: 5000
